# hucoro

./: .clang-format  CMakeLists.txt
src/: single_thread_scheduler.cpp  spawn_task.cpp
src/include/: config.h  entry.h  exception.h  hucoro_traits.h  single_thread_scheduler.h  spawn_task.h  task.h
test/: CMakeLists.txt  counter.cpp  counter.h  hucoro_traits_test.cpp  task_test.cpp
